--- a/nearby-serve/package.json
+++ b/nearby-serve/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.41.0",
+    "firebase": "^12.9.0",
     "framer-motion": "^11.0.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
